# mistralai-client-rs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.template.md  SECURITY.md  release.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
examples/: chat.rs  chat_async.rs  chat_with_function_calling.rs  chat_with_function_calling_async.rs  chat_with_streaming.rs  embeddings.rs  embeddings_async.rs  list_models.rs  list_models_async.rs
src/: lib.rs
src/v1/: chat.rs  chat_completion.rs  chat_stream.rs  client.rs  common.rs  constants.rs  embedding.rs  error.rs  list_models.rs  mod.rs  model_list.rs  tool.rs  utils.rs
tests/: v1_chat_completion_test.rs  v1_client_chat_async_test.rs  v1_client_chat_stream_test.rs  v1_client_chat_test.rs  v1_client_embeddings_async_test.rs  v1_client_embeddings_test.rs  v1_client_list_models_async_test.rs  v1_client_list_models_test.rs  v1_client_new_test.rs  v1_client_test.rs  v1_constants_test.rs  v1_embeddings_test.rs  v1_list_models_test.rs  v1_tool_test.rs
