[package]
name = "mistralai-client"
description = "Mistral AI API client library for Rust (unofficial)."
license = "Apache-2.0"
version = "0.1.0"

edition = "2021"
rust-version = "1.76.0"

authors = ["Ivan Gabriele <ivan.gabriele@protonmail.com>"]
categories = ["api-bindings"]
homepage = "https://github.com/ivangabriele/mistralai-client-rs#readme"
keywords = ["mistral", "mistralai", "client", "api", "llm"]
readme = "README.md"
repository = "https://github.com/ivangabriele/mistralai-client-rs"

[dependencies]
minreq = { version = "2.11.0", features = ["https-rustls", "json-using-serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
dotenv = "0.15.0"
jrest = "0.2.3"
