[package]
name = "mistralai-client"
description = "Mistral AI API client library for Rust (unofficial)."
license = "Apache-2.0"
version = "0.5.0"

edition = "2021"
rust-version = "1.76.0"

authors = ["Ivan Gabriele <ivan.gabriele@protonmail.com>"]
categories = ["api-bindings"]
homepage = "https://github.com/ivangabriele/mistralai-client-rs#readme"
keywords = ["mistral", "mistralai", "client", "api", "llm"]
readme = "README.md"
repository = "https://github.com/ivangabriele/mistralai-client-rs"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.11.24", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
jrest = "0.2.3"
