[package]
name = "mistralai-client"
description = "Mistral AI API client library for Rust (unofficial)."
license = "Apache-2.0"
version = "0.11.0"

edition = "2021"
rust-version = "1.76.0"

authors = ["Ivan Gabriele <ivan.gabriele@protonmail.com>"]
categories = ["api-bindings"]
homepage = "https://github.com/ivangabriele/mistralai-client-rs#readme"
keywords = ["mistral", "mistralai", "client", "api", "llm"]
readme = "README.md"
repository = "https://github.com/ivangabriele/mistralai-client-rs"

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.77"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.12.0", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = "0.26.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"

[dev-dependencies]
jrest = "0.2.3"
